@@ -389,12 +389,19 @@
 
   // Whether to run DICOM C-Move operations synchronously. If set to
   // "false" (the default), each incoming C-Move request results in
-  // creating a new background job. Until Orthanc 1.3.2, the default
+  // creating a new background job. Up to Orthanc 1.3.2, the implicit
   // behavior was to use synchronous C-Move.
   "SynchronousCMove" : false,
 
   // Maximum number of completed jobs that are kept in memory. A
   // processing job is considered as complete once it is tagged as
   // "Success" or "Failure".
-  "JobsHistorySize" : 10
+  "JobsHistorySize" : 10,
+
+  // Specifies how Orthanc reacts when it receives a DICOM instance
+  // whose SOPInstanceUID is already stored. If set to "true", the new
+  // instance replaces the old one. If set to "false", the new
+  // instance is discarded and the old one is kept. Up to Orthanc
+  // 1.4.1, the implicit behavior corresponded to "false".
+  "OverwriteInstances" : false
 }
